hphp/test/zend/good/Zend/tests/errmsg_044.php.expectf

Fatal error: Cannot use array access on an object in %s/errmsg_044.php on line 4
